terraform/examples/openshift/api/onify-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: onify-api
  labels:
    app: onify
    tier: api
spec:
  selector:
    app: onify
    tier: api
  ports:
    - name: onify-api
      protocol: TCP
      port: 8181
      targetPort: 8181
    - name: onify-api-443
      protocol: TCP
      port: 443
      targetPort: 8181
