terraform/examples/openshift/api/onify-api-dev-route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: onify-api-dev
  namespace: onify
  selfLink: /apis/route.openshift.io/v1/namespaces/onify/routes/onify-api-dev
  uid: 2a37bdd3-ece1-4075-b786-81f255a14f35
  resourceVersion: '76008234'
  creationTimestamp: '2020-10-07T07:05:25Z'
  labels:
    app: onify
    tier: api
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2020-10-07T07:05:25Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:labels':
            .: {}
            'f:app': {}
            'f:tier': {}
        'f:spec':
          'f:host': {}
          'f:port':
            .: {}
            'f:targetPort': {}
          'f:tls':
            .: {}
            'f:caCertificate': {}
            'f:certificate': {}
            'f:insecureEdgeTerminationPolicy': {}
            'f:termination': {}
          'f:to':
            'f:kind': {}
            'f:name': {}
            'f:weight': {}
          'f:wildcardPolicy': {}
    - manager: openshift-router
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2020-10-07T07:05:26Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:tls':
            'f:key': {}
        'f:status':
          'f:ingress': {}
spec:
  host: onify-api-dev.onify.net
  to:
    kind: Service
    name: onify-api
    weight: 100
  port:
    targetPort: onify-api-443
  tls:
    termination: edge
    certificate: |
      -----BEGIN CERTIFICATE-----
      insert
      -----END CERTIFICATE-----
    key: |
      -----BEGIN PRIVATE KEY-----
        insert
      -----END PRIVATE KEY-----
    caCertificate: |
      -----BEGIN CERTIFICATE-----
        insert
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
        insert
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
        insert
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
status:
  ingress:
    - host: onify-api-dev.onify.net
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2020-10-07T07:05:26Z'
      wildcardPolicy: None
      routerCanonicalHostname: apps.ocp-prod-0.k8s.onify.net
